--- a/API/package.json
+++ b/API/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "connect": "^3.7.0",
+    "dateformat": "^4.5.1",
     "express": "^4.17.1",
     "request": "^2.88.2",
     "sqlite3": "^5.0.2"
